<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarFuncionarios">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar_func"
            android:textAlignment="center"
            android:textColor="@color/txt_color"
            android:layout_margin="20dp"
            android:textSize="25dp"/>

        <View
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="20dp"
            android:background="#000"/>

        <EditText
            android:id="@+id/nome_funcionario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_funcionario"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>

        <EditText
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rg"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>

        <EditText
            android:id="@+id/data_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/data_nascimento" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/tipo_funcionario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_funcionario"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/data_admicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_admicao"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/cnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cnh"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/validade_cnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/validade_cnh"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/primeira_cnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/primeira_cnh"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/categoria_cnh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categoria_cnh"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sexo"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>

        <EditText
            android:id="@+id/salario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/salario"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/tipo_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_telefone"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cep"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rua"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estado"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cidade"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bairro"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>

        <EditText
            android:id="@+id/numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/hr_entrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hr_entrada"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>
        <EditText
            android:id="@+id/hr_saida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hr_saida"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>

        <Button
            android:id="@+id/btn"
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:text="@string/cadastrar"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_gravity="right"
            android:onClick="Cadastrar"
            android:background="@color/yellow_sfte"

            />

    </LinearLayout>

</ScrollView>