<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.httpssftetransporte.sfte.CadastrarPassageiro">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cad_passageiro"
                android:textAlignment="center"
                android:textColor="@color/txt_color"
                android:layout_margin="20dp"
                android:textSize="25dp"/>

            <View
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="20dp"
                android:background="#000"/>

            <EditText
                android:id="@+id/nome_responsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_responsavel"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>

            <EditText
                android:id="@+id/rg_responsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rg_responsavel"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>

            <EditText
                android:id="@+id/data_nascimento_responsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_nascimento"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/cpf_responsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/tipo_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tipo_telefone"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/parentesco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parentesco"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/fk_id_escola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/escola"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/van"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="40dp"
                android:drawablePadding="-0dp"
                android:textColor="@color/txt_color"
                android:textSize="17dp"/>
            <Spinner
                android:id="@+id/fk_id_van"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="40dp"
                android:drawablePadding="-0dp"/>
            <!--<EditText
                android:id="@+id/fk_id_van"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/van"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>-->
            <EditText
                android:id="@+id/nome_crianca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_crianca"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/data_nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_nascimento"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/cpf_passageiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf_passageiro"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/rg_passageiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rg_passageiro"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/rua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rua"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
             <EditText
                android:id="@+id/cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade"
                 android:layout_marginBottom="20dp"
                 android:layout_marginLeft="45dp"
                 android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bairro"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>

            <EditText
                android:id="@+id/numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/hr_entrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hr_entrada"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>
            <EditText
                android:id="@+id/hr_saida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hr_saida"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"/>



                <Button
                    android:layout_marginTop="20dp"
                    android:layout_width="200dp"
                    android:text="@string/cadastrar"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:layout_gravity="right"
                    android:onClick="Cadastrar"
                    android:background="@color/yellow_sfte"

                    />

        </LinearLayout>

</ScrollView>
