<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.httpssftetransporte.sfte.CadastrarVan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cad_van"
            android:textAlignment="center"
            android:textColor="@color/txt_color"
            android:layout_margin="20dp"
            android:textSize="25dp"/>

        <View
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="20dp"
            android:background="#000"/>

        <EditText
            android:id="@+id/placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/placa"/>

        <EditText
            android:id="@+id/txtModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/modelo"/>
        <EditText
            android:id="@+id/txtAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/ano"/>
        <EditText
            android:id="@+id/txtCapacidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/capacidade"/>
        <EditText
            android:id="@+id/txtMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/marca"/>
        <EditText
            android:id="@+id/txtRenavam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/renavam"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motorista"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="40dp"
            android:drawablePadding="-0dp"
            android:textColor="@color/txt_color"
            android:textSize="17dp"/>
        <Spinner
            android:id="@+id/motorista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="40dp"
            android:drawablePadding="-0dp">
        </Spinner>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monitora"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="-0dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/txt_color"
            android:textSize="17dp"/>
        <Spinner
            android:id="@+id/monitora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="35dp"
            android:drawablePadding="-0dp"
            >
        </Spinner>


        <Button
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:text="@string/cadastrar"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_gravity="right"
            android:onClick="Inserir"
            android:background="@color/yellow_sfte"

            />
    </LinearLayout>

</ScrollView>
